# 1.1.0

- Fixed issue #1
- Updated code base to Python 3